Fix dark mode btn text color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -276,7 +276,7 @@ html {
   --color-sidebar: var(--sidebar);
   /* Custom: */
   --color-pop: var(--pop);
-  --color-primary-foreground: var(--sidebar-primary-foreground);
+  /* --color-primary-foreground: var(--sidebar-primary-foreground); */
 }
 
 /*
